Fix dark gray background behind whitespaces

--- a/_sass/code-highlight.scss
+++ b/_sass/code-highlight.scss
@@ -7,8 +7,8 @@
 .highlight table td { padding: 5px; }
 .highlight table pre { margin: 0; }
 .highlight .w {
-  color: #f8f8f2;
-  background-color: #272822;
+  // color: #f8f8f2;
+  // background-color: #272822;
 }
 .highlight .err {
   color: #272822;
